[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steganography = "1.0.2"
image = "0.24.1"
clap = { version = "4.4.4", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
rpassword = "5.0"